@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[46] --> Updated script Transmogrification and fix crash gargoyle.
 [45] --> [Argent Tournament] Fix Npc Lake Frog.
 [44] --> Revert 'Fix Pet CD After Summon.'.
 [43] --> Fix [Warrior] T10 4P Bonus.
